# perfect_python_project

./: .hgignore  Makefile  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: test_template.yml
hooks/: post_gen_project.sh  pre_prompt.py
{{cookiecutter.project_slug}}/: .dockerignore  .flake8  .hgignore  Caddyfile  Dockerfile  Makefile  README.rst  alembic.ini  docker-compose.dev.yml  docker-compose.smoke_test.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  hypercorn.toml  migrate_database.py  pyproject.toml  sample.env
{{cookiecutter.project_slug}}/.github/workflows/: continuous_integration.yml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/scripts/: install_hooks.py  install_hooks.sh  smoke_test.py  test_project.py
{{cookiecutter.project_slug}}/templates/: home.html
{{cookiecutter.project_slug}}/tests/: conftest.py  test_logging.py  test_resources.py  test_schemas.py
{{cookiecutter.project_slug}}/tests/models/: test_user.py
{{cookiecutter.project_slug}}/tests/routers/: test_hello.py  test_user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  exception_handlers.py  logging.py  logging_utils.py  main.py  middleware.py  resources.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: __init__.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/routers/: hello.py  root.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: __init__.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html
