[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
alembic = "*"
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
hypercorn = "*"
loguru = "*"
passlib = { extras = ["argon2"], version = "*" }
psycopg2-binary = "*"
orjson = "*"
pygments = "*"
python = "^{{cookiecutter.python_version}}"
python-dotenv = "*"
tenacity = "*"
stackprinter = "*"
uvloop = "*"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
Faker = "*"
httpx = { version = "*", extras = ["cli"] }
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
default_async_timeout = 600

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = {{cookiecutter.line_length}}
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
"smoke_test.py" = ["S"]
