[project]
name = "{{cookiecutter.project_slug}}"
description = ""
authors = [
    {name="{{cookiecutter.author}}", email="{{cookiecutter.email}}"},
]
dynamic = ["version"]
requires-python = "~={{cookiecutter.python_version}}.0"
readme = "README.rst"

[dependency-groups]
dev = [
    "mypy",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = {{cookiecutter.line_length}}
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
