[project]
name = "{{cookiecutter.project_slug}}"
description = ""
authors = [
    {name="{{cookiecutter.author}}", email="{{cookiecutter.email}}"},
]
dynamic = ["version"]
requires-python = "~={{cookiecutter.python_version}}.0"
readme = "README.rst"

dependencies = [
    "fastapi",
    "granian[reload,uvloop]",
    "hypercorn",
    "jinja2",
    "jinja2-fragments",
    "loguru",
    "orjson",
    "pygments",
    "python-dotenv",
    "stackprinter",
    "uvloop",
]

[dependency-groups]
dev = [
    "asgi-lifespan",
    "httpx[cli,http2]",
    "mypy",
    "pip-audit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = {{cookiecutter.line_length}}
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
"smoke_test.py" = ["S"]
